fix overflow price

--- a/src/simi/App/nativeInner/Cart/cartPage.module.css
+++ b/src/simi/App/nativeInner/Cart/cartPage.module.css
@@ -39,6 +39,17 @@
 }
 
 
+@media (max-width: 960px) {
+    .summary_container {
+        margin-left: 0;
+        margin-right: 0;
+        width: 100%;
+        left: 0;
+        position: absolute;
+    }
+}
+
+
 .topOutOfStockContainer {
     background: #FFE8EA;
     padding: 10px 12px;
